testsuite/tests/properties/invalid_node_builder/common_nonempty.lkt
import common

@synthetic
class SynthNode: FooNode {
    number: Int
    @parse_field f1: Literal
    @parse_field f2: FooNode
}
